--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,8 @@
-{"token":"","client":"536486320348856322","tag":"?","case":"false","separator":"\\s+","ownerId":"409356663833886740"}
+{
+  "token": "",
+  "client": "536486320348856322",
+  "tag": "?",
+  "case": "false",
+  "separator": "\\s+",
+  "ownerId": "409356663833886740"
+}
